--- a/Lab12-Roshambo/Lab12-Roshambo.csproj
+++ b/Lab12-Roshambo/Lab12-Roshambo.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HumanPlayer.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomPlayer.cs" />
+    <Compile Include="RockPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
