--- a/Lab12-Roshambo/Lab12-Roshambo.csproj
+++ b/Lab12-Roshambo/Lab12-Roshambo.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomPlayer.cs" />
     <Compile Include="RockPlayer.cs" />
+    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
